fixed post request on swagger
